--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta property="og:title" content="Carol Dines" />
+    <meta property="og:url" content="http://carol-dines.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta name="og:description" content="Carol Dines is an Actress and Audiobook Narrator">
+    <meta name="description" content="Carol Dines is an Actress and Audiobook Narrator">
+    <meta name="keywords" content="Carol Dines, Louisville, KY, Kentucky, Voice, Actor, Actress, Stage, new york, audible, audiobooks, audiobook, ebook, narrator">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,500,700" rel="stylesheet">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favico.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <title>Carol Dines | Actress/Audiobook Narrator</title>
   </head>
   <body>
     <div class="wrap" id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      ga('create', 'UA-42524417-1', 'auto');
+      ga('send', 'pageview');
 
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
+    </script>
   </body>
 </html>
